--- a/fancyshowcaseview/src/main/res/layout/fancy_showcase_view_layout_title.xml
+++ b/fancyshowcaseview/src/main/res/layout/fancy_showcase_view_layout_title.xml
@@ -1,20 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2018. Faruk Toptaş
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fcsv_title_container"
     android:layout_width="match_parent"
@@ -23,41 +8,52 @@
 
     <TextView
         android:id="@+id/fscv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center_vertical"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="0dp"
+        android:fontFamily="@font/essiri_bold"
+        android:gravity="center_horizontal"
+        tools:text=";elr,g;relg,e;l, g;lmgrelmgregrgm;lmge"
         android:padding="10dp"
-        android:textSize="22sp"
-        tools:text="Title" />
+        android:textAlignment="center"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/fscv_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fscv_title"
-        android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center_vertical"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="0dp"
+        android:fontFamily="@font/essiri_regular"
+        android:gravity="center_horizontal"
         android:padding="10dp"
-        android:textSize="22sp"
-        tools:text="Desc" />
+        tools:text="tem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firsomre" />
 
     <TextView
         android:id="@+id/fscv_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fscv_desc"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="9dp"
-        android:layout_toEndOf="@+id/fscv_desc"
-        android:layout_toRightOf="@+id/fscv_desc"
-        android:fontFamily="sans-serif-condensed"
-        android:gravity="center_horizontal"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/essiri_bold"
+        android:gravity="end"
         android:padding="16dp"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="22sp"
+        android:textStyle="bold"
         tools:text="Skip" />
-
-
-</LinearLayout>
+</RelativeLayout>
