--- a/fancyshowcaseview/src/main/res/layout/fancy_showcase_view_layout_title.xml
+++ b/fancyshowcaseview/src/main/res/layout/fancy_showcase_view_layout_title.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fcsv_title_container"
     android:layout_width="match_parent"
@@ -20,13 +20,13 @@
         android:fontFamily="@font/essiri_bold"
         android:gravity="center_horizontal"
         tools:text=";elr,g;relg,e;l, g;lmgrelmgregrgm;lmge"
-        android:padding="10dp"
+        android:paddingHorizontal="16dp"
         android:textAlignment="center"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/fscv_desc"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fscv_title"
         android:layout_alignParentStart="true"
@@ -34,11 +34,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="0dp"
         android:fontFamily="@font/essiri_regular"
         android:gravity="center_horizontal"
-        android:padding="10dp"
+        android:paddingHorizontal="8dp"
         tools:text="tem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firstem First Queue Item First Queue Item Firsomre" />
 
     <TextView
@@ -48,12 +48,13 @@
         android:layout_below="@+id/fscv_desc"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:layout_gravity="end"
         android:fontFamily="@font/essiri_bold"
         android:gravity="end"
         android:padding="16dp"
+        android:layout_marginTop="32dp"
         android:textColor="@android:color/holo_red_dark"
         android:textStyle="bold"
         tools:text="Skip" />
-</RelativeLayout>
+</LinearLayout>
